<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Insertar_tienda_Activity"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="392dp"
        android:layout_height="515dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/TVItienda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:padding="8dp"
                android:text="@string/F_insertarTienda"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Tnombre"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_margin="2dp"
                android:hint="@string/H_Inombre"
                android:inputType="text"
                android:padding="8dp" />

            <EditText
                android:id="@+id/Tdireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="@string/H_Idireccion"
                android:inputType="textPostalAddress"
                android:padding="8dp" />

            <EditText
                android:id="@+id/Ttelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="@string/H_Itelefono"
                android:inputType="phone"
                android:padding="8dp" />

            <EditText
                android:id="@+id/Tweb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="@string/H_Iweb"
                android:inputType="textEmailAddress"
                android:padding="8dp" />

            <EditText
                android:id="@+id/Thorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="@string/H_Ihorario"
                android:inputType="text"
                android:padding="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/TVCBexpecialidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:padding="8dp"
                android:text="@string/F_insetarchekbox"
                android:textSize="16sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/CBdomesticos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:id="@+id/TVcdomesticos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CB_Domesticos"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/CBexoticos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:id="@+id/TVcbexoticos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CB_Exoticos"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/SWPeluqueria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/TVswpeluqueria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/SW_Peluqueria"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/ITenviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/Benviar" />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>