<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal_Activity"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="233dp"
        android:layout_height="163dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/Bbuscar"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:text="@string/Bbuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/Bpuntuar"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:text="@string/Bpuntuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bbuscar" />

    <Button
        android:id="@+id/Binsertar"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="48dp"
        android:text="@string/Binsertar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bpuntuar"
        app:layout_constraintVertical_bias="0.473" />
</android.support.constraint.ConstraintLayout>