<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".contacto_Activity">


    <TextView
        android:id="@+id/textContacto"
        android:layout_width="311dp"
        android:layout_height="87dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/F_contacto"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CorreoUsusario"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/H_correo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textContacto" />

    <EditText
        android:id="@+id/ConsultaUsusario"
        android:layout_width="283dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorfondo"
        android:ems="10"
        android:hint="@string/H_contacto"
        android:inputType="textMultiLine"
        android:longClickable="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CorreoUsusario" />

    <Button
        android:id="@+id/Cenviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Benviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConsultaUsusario"
        app:layout_constraintVertical_bias="0.703" />

</android.support.constraint.ConstraintLayout>